// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`test PositionInput should render correctly on desktop 1`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
    </div>
    <div
      class="input"
    >
      UnitInput: 
      x_position
      <p>
        precision: 
        2
      </p>
      <p>
        underline
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="x_position"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 2`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
    </div>
    <div
      class="input"
    >
      UnitInput: 
      y_position
      <p>
        precision: 
        2
      </p>
      <p>
        underline
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="y_position"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 3`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        1
      </sub>
    </div>
    <div
      class="input"
    >
      UnitInput: 
      x1_position
      <p>
        precision: 
        2
      </p>
      <p>
        underline
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="x1_position"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 4`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        1
      </sub>
    </div>
    <div
      class="input"
    >
      UnitInput: 
      y1_position
      <p>
        precision: 
        2
      </p>
      <p>
        underline
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="y1_position"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 5`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        2
      </sub>
    </div>
    <div
      class="input"
    >
      UnitInput: 
      x2_position
      <p>
        precision: 
        2
      </p>
      <p>
        underline
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="x2_position"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 6`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        2
      </sub>
    </div>
    <div
      class="input"
    >
      UnitInput: 
      y2_position
      <p>
        precision: 
        2
      </p>
      <p>
        underline
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="y2_position"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 7`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      X
      <sub>
        C
      </sub>
    </div>
    <div
      class="input"
    >
      UnitInput: 
      cx_position
      <p>
        precision: 
        2
      </p>
      <p>
        underline
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="cx_position"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on desktop 8`] = `
<div>
  <div
    class="dimension"
  >
    <div
      class="label"
    >
      Y
      <sub>
        C
      </sub>
    </div>
    <div
      class="input"
    >
      UnitInput: 
      cy_position
      <p>
        precision: 
        2
      </p>
      <p>
        underline
      </p>
      <p>
        unit: 
        mm
      </p>
      <input
        id="cy_position"
        value="0"
      />
    </div>
  </div>
</div>
`;

exports[`test PositionInput should render correctly on mobile 1`] = `
<div>
  <div
    id="x_position"
  >
    X
    <div>
      0
    </div>
    <button
      type="button"
    />
  </div>
</div>
`;
